--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,191 @@
-.App {
-  text-align: center;
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  transition: 0.3s;
 }
 
-.App-logo {
-  height: 40vmin;
+.App {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  background: var(--bkgMain);
+}
+
+/* global classes */
+
+.container {
+  padding: 0 10%;
+}
+.container-mobile {
+  padding: 0 10%;
+}
+.hide {
+  opacity: 0 !important;
+  display: none;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.main_text {
+  color: var(--textMain);
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 24px;
+}
+.secondary_text {
+  color: var(--textSec);
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 26px;
+}
+.secondary_small_text {
+  color: var(--textSec);
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 20px;
+}
+
+.secondary_mid_text {
+  color: var(--textSec);
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.mainColorText {
+  color: var(--textPraimary) !important;
+}
+
+.OrangeText {
+  color: var(--MainOrange) !important;
+}
+
+@media (max-width: 678px) {
+  .sections_title {
+    width: 100%;
+    text-align: center;
+  }
+  .container {
+    padding: 0 4%;
+  }
+  .container-mobile {
+    padding: 0 2%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* scroll bar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
+  margin-right: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+::-webkit-scrollbar-track {
+  background: #161c24;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #fa541c;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(145, 158, 171, 1);
+}
+
+h1 {
+  color: var(--textMain);
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 80px;
+}
+h2 {
+  color: var(--textMain);
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 64px;
+}
+h3 {
+  color: var(--textMain);
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 54px;
+}
+h4 {
+  color: var(--textMain);
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 36px;
+}
+h5 {
+  color: var(--textMain);
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+}
+h6 {
+  color: var(--textMain);
+  font-family: "Barlow";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+@media (max-width: 678px) {
+  h1 {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 50px;
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+  h2 {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 42px;
+  }
+  h3 {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+  }
+  h4 {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 30px;
+  }
+  h5 {
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+  }
+  h6 {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 28px;
   }
 }
