--- a/src/pages/CoursesLanding/components/Main/Main.module.scss
+++ b/src/pages/CoursesLanding/components/Main/Main.module.scss
@@ -2,9 +2,16 @@
 	display: flex;
 	gap: 24px;
 	justify-content: space-between;
-    height: 100vh;
-    align-items: center;
+	height: fit-content;
+	align-items: center;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    min-height: 100vh;
 	.content {
+        h1{
+            width: 245px;
+            flex-grow: 1;
+        }
 		max-width: 466px;
 		display: flex;
 		flex-direction: column;
@@ -14,7 +21,7 @@
 		hr {
 			border: 1px dashed rgba(145, 158, 171, 0.24);
 			width: 100%;
-            margin: 20px 0;
+			margin: 20px 0;
 		}
 		.buttons {
 			display: flex;
@@ -37,12 +44,12 @@
 				font-size: 15px;
 				line-height: 26px;
 				color: white;
-                &:hover{
-                    opacity: 0.7;
-                    img{
-                        transform: translateX(10px);
-                    }
-                }
+				&:hover {
+					opacity: 0.7;
+					img {
+						transform: translateX(10px);
+					}
+				}
 			}
 			h6 {
 				display: flex;
@@ -50,40 +57,59 @@
 				gap: 15px;
 				cursor: pointer;
 				> button {
-                    display: grid;
-                    place-items: center;
-                    place-content: center;
+					display: grid;
+					place-items: center;
+					place-content: center;
 					width: 48px;
 					height: 48px;
 					background: #22b8cf;
 					box-shadow: 0px 8px 16px rgba(34, 184, 207, 0.24);
 					border-radius: 50px;
-                    
 				}
-                &:hover {
-                    > button{
-                        opacity: 0.7;
-                    }
-                }
+				&:hover {
+					> button {
+						opacity: 0.7;
+					}
+				}
 			}
-
 		}
 
-
-
-        .info{
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-        }
+		.info {
+			display: flex;
+			justify-content: space-between;
+			width: 100%;
+			span {
+				position: relative;
+				z-index: 1;
+				h3 {
+                    width: fit-content;
+					&::before {
+						content: ' ';
+						position: absolute;
+						width: 24px;
+						height: 24px;
+						border-radius: 20px;
+						top: 10px;
+						left: -6px;
+						z-index: -1;
+					}
+				}
+				&:first-of-type > :before {
+					background: rgba(255, 193, 7, 0.24);
+				}
+				&:nth-of-type(2) > :before {
+					background: rgba(255, 72, 66, 0.24);
+				}
+				&:last-of-type > :before {
+					background: rgba(12, 214, 110, 0.24);
+				}
+			}
+		}
 	}
 
-
-
-
 	.img {
-		min-width: 670px;
-		height: 670px;
+		max-width: 670px;
+		max-height: 670px;
 		img {
 			width: 100%;
 		}
@@ -97,4 +123,38 @@
 .orange {
 	color: #fa541c;
 	text-decoration: underline;
+}
+
+@media (max-width: 678px) {
+	.section {
+        justify-content: center;
+        padding-top: 120px;
+        padding-bottom: 80px;
+		.content {
+			gap: 24px;
+			align-items: center;
+			text-align: center;
+			hr {
+				margin: 30px 0;
+			}
+			.buttons {
+				gap: 24px;
+				flex-direction: column;
+				margin-top: 20px;
+			}
+
+			.info {
+				text-align: center;
+                flex-wrap: wrap;
+                h3{
+                    &::before{
+                        top: 0 !important;
+                    }
+                }
+			}
+		}
+		.img {
+			display: none;
+		}
+	}
 }
