feat: weWorkWith and traslation + fix: class & css  mistaks

--- a/src/pages/CoursesLanding/components/Main/Main.module.scss
+++ b/src/pages/CoursesLanding/components/Main/Main.module.scss
@@ -34,7 +34,7 @@
 				padding: 11px 22px;
 				gap: 8px;
 				border-radius: 8px;
-				font-family: 'Barlow';
+				font-family: 'Barlow' , sans-serif;
 				font-style: normal;
 				font-weight: 700;
 				font-size: 15px;
@@ -131,7 +131,7 @@
 			align-items: center;
 			text-align: center;
 			h1 {
-				width: 245px;
+				width: 270px;
 				flex-grow: 1;
 			}
 
