--- a/src/pages/CoursesLanding/components/LatestPosts/Post/Post.module.scss
+++ b/src/pages/CoursesLanding/components/LatestPosts/Post/Post.module.scss
@@ -3,11 +3,10 @@
 	flex-direction: column;
 	border: 1px solid rgba(145, 158, 171, 0.24);
 	border-radius: 16px;
-	width: 362px;
+	width: calc(33.3%);
 	overflow: hidden;
 	> .card_img {
-		width: 362px;
-
+		width: 100%;
 		height: 362px;
 	}
 	.content {
@@ -16,6 +15,7 @@
 		align-items: flex-start;
 		padding: 24px;
 		gap: 24px;
+		height: calc(100% - 362px);
 
 		.date {
 			display: flex;
@@ -34,6 +34,8 @@
 			align-items: flex-start;
 			padding: 0px;
 			gap: 20px;
+			height: 100%;
+			justify-content: space-between;
 			> .top {
 				display: flex;
 				flex-direction: column;
@@ -47,7 +49,35 @@
 				align-items: center;
 				padding: 0px;
 				gap: 12px;
+				justify-self: flex-end;
 			}
+		}
+	}
+}
+
+@media (max-width: 678px) {
+	.card_small {
+		display: flex;
+		flex-direction: row;
+		align-items: flex-start;
+		padding: 0px;
+		gap: 16px;
+		height: 80px;
+		align-self: stretch;
+		.card_img_small {
+			width: 80px !important;
+			height: 80px !important;
+			border-radius: 12px;
+		}
+		.card_small__content {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+            text-align: start;
+			gap: 8px;
+			width: 239px;
+			height: 80px;
+            align-self: stretch;
 		}
 	}
 }
