--- a/src/pages/CoursesLanding/components/FeaturedCourses/CardCourse/CardCourse.module.scss
+++ b/src/pages/CoursesLanding/components/FeaturedCourses/CardCourse/CardCourse.module.scss
@@ -2,7 +2,6 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	// width: 362px;
 	box-shadow: -16px 16px 56px -8px rgba(56, 62, 66, 0.16);
 	border-radius: 16px;
 	overflow: hidden;
@@ -17,7 +16,8 @@
 		align-items: flex-start;
 		padding: 24px;
 		gap: 24px;
-
+		height: 280px;
+		justify-content: space-between;
 		.card_content_top {
 			display: flex;
 			width: 100%;
@@ -29,9 +29,35 @@
 		}
 
 		.card_content_rating {
+			display: flex;
+			align-items: center;
+			gap: 15px;
+			> span {
+				display: flex;
+				gap: 5px;
+				align-items: center;
+			}
+			hr {
+				border: 1px solid rgba(145, 158, 171, 0.24);
+				height: 20px;
+			}
 		}
 
 		.card_content_teacherInfo {
+			display: flex;
+			align-items: center;
+			gap: 8px;
+			bottom: 0;
+		}
+	}
+	.card_info {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		padding: 24px 20px;
+		width: 100%;
+		gap: 20px;
+		span {
 			display: flex;
 			align-items: center;
 			gap: 8px;
@@ -39,11 +65,17 @@
 	}
 }
 
-
 .discount {
 	text-align: right;
 	text-decoration-line: line-through;
 	color: #919eab;
 }
 
-
+@media (max-width: 570px) {
+	.card_wrapper {
+		box-shadow: none;
+		.card_image {
+			height: 321.11px;
+		}
+	}
+}
