--- a/src/pages/CoursesLanding/components/FeaturedCourses/FeaturedCourses.scss
+++ b/src/pages/CoursesLanding/components/FeaturedCourses/FeaturedCourses.scss
@@ -11,6 +11,7 @@
 	text-align: start;
 	gap: 80px;
 	#{&}_title {
+		text-align: center;
 		gap: 24px;
 		@include flex-c;
 	}
@@ -18,6 +19,7 @@
 		.swiper_container {
 			margin-top: -120px;
 			padding-top: 100px;
+			padding-bottom: 40px;
 		}
 	}
 
@@ -45,6 +47,7 @@
 			.swiper_container {
 				margin-top: 0;
 				padding-top: 0;
+				padding-bottom: 0;
                 margin: 0 -10px;
 			}
 		}
