--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -4,6 +4,8 @@
 	border: 1px solid rgba(145, 158, 171, 0.24);
 	border-radius: 16px;
 	overflow: hidden;
+	height: 100%;
+	width: 100%;
 	cursor: pointer;
 	> .card_img {
 		width: 100%;
