--- a/src/pages/CoursesBlog/Blogs_main/Blogs_main.module.scss
+++ b/src/pages/CoursesBlog/Blogs_main/Blogs_main.module.scss
@@ -10,6 +10,7 @@
 		display: grid;
 		min-width: 70%;
 		grid-template-columns: repeat(2, 1fr); /* 2 columns */
+		grid-template-rows: repeat(2, 1fr); /* 2 columns */
 		gap: 40px 30px; /* Adjust the gap between grid items as desired */
 		position: relative;
 		> h1 {
