fix: Say Component and title in Team component

--- a/src/pages/CoursesLanding/components/Team/TeamCard/TeamCard.module.scss
+++ b/src/pages/CoursesLanding/components/Team/TeamCard/TeamCard.module.scss
@@ -13,7 +13,7 @@
         align-items: center;
         padding: 24px 24px 12px;
         gap: 4px;
-        
+        width: 100%;
     }
 
     .img{
